@@ -1,8 +1,8 @@
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.i486.rpm 3696192 BLAKE2B 47600186c0d2c4291c5c729be5e9020efb527f765bccbbfa5b4b2e7ca972faf1a79e4c4fdbc9e6b1200e8d4945a187a28f70a9eb927d0b1a769015462124a634 SHA512 464a8de063e092092f464478c3167b8f18792e2a0cda22e970fbbd910eb4417d880c84730cfcc8ec1b4c24f214bd26fcaa13d296258394083a43d497fa753138
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.x86_64.rpm 3695594 BLAKE2B ef23b41c05104d488c2d67bf5a95523b496d548be91b826cf7a709bd370ae6c8156421fe89480fead743a99576c0c3aa70a129dccfa5173934adacb05dd5d7bb SHA512 2f0664e798166fd09e3da12328e02e8e9e51cac3ea3e941e293803dfa7e80e3b4523369373d8e0b917082c545374a6d1fbe88ae45ad7f18a94abc2a78a331218
-DIST epson-inkjet-printer-escpr2-1.2.5-1.x86_64.rpm 3856031 BLAKE2B 296c2f5ee5e7e59020f09df699f6cc9b8abd9451e1c08972b76ff2a2add8e6891264f1804f37730bd0760883f4ab7516e92fd3705e189e60c6eb5baedff84917 SHA512 f074cf66e5787ab98a9776dd494ab729399da15265f876f81abe90e8d112437f80e14b1dab983790f2f1df7fde7bb757f7c5e3ee7cb7ff64418bc9a976172d8d
 DIST epson-inkjet-printer-escpr2-1.2.6-1.x86_64.rpm 3856586 BLAKE2B a6f6795236211c8815bad7205acce24bffc7a2d72805d2b2c5f8a6e79f791ba33e55a00176804e3172ce75dadabfd6b54bb95b7a772a0eb1085d59f48019de97 SHA512 5672cf6cc358612851ea6bc813faca98dd921e41d155ce9b4f1fdf29ae9357aaf5deedd21360493f3c74f8b7960a321b26770241f250ebb5d794acd6b878e7f4
+DIST epson-inkjet-printer-escpr2-1.2.7-1.x86_64.rpm 3882614 BLAKE2B f2a53cb271662431c06a0818d14a5859967f48ce968a7c60abe33ff55e6247f28725661da1ee9163116b59744cf6f24c2b445e7e4c87b2b7b3b9d7f513645baa SHA512 f7668b31812c2572b017d8b6ad6eeb42d6d27233473bcdf734506870196b88c212c1400448fc0213afbe38c8a38a00d53e59f5e3c65c65ac7b5a7464889006ca
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.62.ebuild 1670 BLAKE2B 97c912c8ea7e1e6c5bad222e8d621b0b1da449ca04e0cac013bc44d6661f689e17a22ab1601f92ccccb36de8e31059724524d1a5b232afb78c4c18a7c3908ce2 SHA512 0af49868af1bc5e93cc7ffb57929ad38e17dbef05cb77b009d2e69b87cdf551b10b9d65f4e2e81e3c9dcaf72b2dbc94bee1c374a3e81aa667f512cce092dee6f
-EBUILD epson-inkjet-printer-escpr2-bin-1.2.5.ebuild 1411 BLAKE2B 7f06b9a3b2b9179e0ed995b1259b007c53ff25cb1e80ba3e6b70bfd2d3cf26ef72053209833f37b90ab3bd5b08c9035ae5a45acc8cf19d0781dfb11e97d9ff3b SHA512 f6a1bb3d710e38305ca943cbf7e7fa206f427e62ece2761201eebf4aa1e8954745cb958cdcdb2e2aeac6de0b8661eff5788ffb80060e6cce9c9e034a68d8cdd6
 EBUILD epson-inkjet-printer-escpr2-bin-1.2.6.ebuild 1431 BLAKE2B 4c71b5cc4ba889b924313e3bdd501dc65dce80141b4778c3ba0c3158f80620eb5ea90aff2998513b2e27cb1926232e723e967b38385971ad23a699703a78583d SHA512 4ccc7add0dad61200fd35f9d903ad91ca78d99e7a77e653fbb08eab6ec4102b4c53b3afe1f6200f003aff540d34f51d7c82e0e433820dfa99420d837d99186f7
+EBUILD epson-inkjet-printer-escpr2-bin-1.2.7.ebuild 1431 BLAKE2B 25d4ce2796ef7a61251a7ccb01539c9eaf7941a1f3997445ebe5dc8562d5af488766976e5d050f6b6a7274aeaaed13cf75a806f166c5f6de47d0948a64790f34 SHA512 19c4c9e2b282835f12d2edd5e6a7ace8d67d7ef045ebfd230962ba8dd54abc4abadc91228db43b051e9e21f8cc16b1be9fffe8bea2542147af8612c82e4bd5e3
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
