@@ -1,8 +1,8 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
 DIST epson-inkjet-printer-escpr2-1.1.62.tar.gz 5101117 BLAKE2B 8bea8fa19ba56d008b1dce174367473287c386bcffbc2df2397f4d9aa396ca9ba447b2719d132e7dd7d800e51b685f6397bb30ed2eac1da813fe456fffa5723a SHA512 648006b9f7b14a5fd7ed31516d420c463383b99a8bbc693a2378128d4e4729290ba2deabfeb8526009c223f8e84d5565b4aba80b5478c6c4865ba9e84948b9b0
-DIST epson-inkjet-printer-escpr2-1.2.5-1.tar.gz 5240391 BLAKE2B da5f97bb8b46c8548c94dcee65cfa5c834611196b4d92618d40ef0d5d24a91a592ad5673a24afd1c5e2fb0da3a230fba4d12a82352c6517b6554ba1a1d9bafae SHA512 715a84305cd2905498534bb060e7f6998601adf666d0ca060d98768ef263e4534009b26d40e45f6d3e226da5b118e60946789dc0bfa7db05a399891f673ffc95
 DIST epson-inkjet-printer-escpr2-1.2.6-1.tar.gz 5264453 BLAKE2B 0a46c390fc227813a25d16120c083cf4cd6dc52aa1b54a95cc93325c1c6e71b798159a82ff1ab854b6f5db9e40645a6fa978bfad7fb9236db6ae56500d29dee2 SHA512 60c243d4e6fd6806c9fd5a2682036bb8f673a218905604f19d18a0a9fcdf9534540992f52df3cfb22d0f537e87eae638965daf9c825f274b130fd90068c85411
+DIST epson-inkjet-printer-escpr2-1.2.7-1.tar.gz 5316839 BLAKE2B 9f9d33f42aa97b5f4a42996f0fe8892c7382bdca393edc97ab5c5af22a0984f530bc5c12818e4046aa0576a41c448216200b4e1f6229dd740b41a8030c8ad23d SHA512 9a8ad8bc1a579d3a50c6869787b9db873851cf34cdce001f1d25980722eb84880881ef604cdc5b89ffa8be6919b3c8b1eeef92fd6ec485705dcf31b1b0ad5055
 EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1319 BLAKE2B 1ac127fac4aec11e279e8f2b2b46d628e51b6cd22a001044e366d4a94cbb5b9e0b4aadaedde11337c6dd681999325142d2b1a77a22ea9319962bbcd02c49f992 SHA512 6d251c780d850ec05c2c9fd9bb9137adc0d1aa114783d6a7ee05c1efba58ca8f2a28600858f25c1de2425fd17358b949ab05d9c3677ead12d1f6cf3350af0f08
-EBUILD epson-inkjet-printer-escpr2-1.2.5.ebuild 1766 BLAKE2B 48a29c6c196866d627aa68bff84d8fab91fb8efa9a05c91e3e96c5573a9028bd8938117498c66bde31fba14b9507e2a56486c031420d21ff01046176ec9e2f02 SHA512 90402f05625c7d68413a286566e6137e8ae258a0e70773892b942942becda4cc030710e59fcaf16c75fd9dae59aa381bbb95f3c41bdee2ed8465fb381b36d896
 EBUILD epson-inkjet-printer-escpr2-1.2.6.ebuild 1786 BLAKE2B 0f616be196db9fdaa2a6ec7ca84a0592e7570726d14ea32bd5c2fcfb710278043e2eeb4068fa80f85cd7122f3336ed65568ecf7f384e99db95c6787c095ebb34 SHA512 6d89c31f68da050f08b8a3b3db8b7faefcc553dfcb7b68fb2d6e81cb5231f2716556175c706f4b48023075a30ade9cd2c47fcf4e5ef2eac5884d21e9e4557f54
+EBUILD epson-inkjet-printer-escpr2-1.2.7.ebuild 1786 BLAKE2B 28c18383028021289a2b27d14306b6c353b2be6bc68edc7c010496e4c5ac20886adb0dce9ad5d40697b801c4cc5973c5ebeff3d05e68b05b09ad05a6be967763 SHA512 c1842aa94aeefd98dc94136dd7812a8cd0e106873d896b81c2ec3fc0da224f1c683adf922301f522ce6c4ff54d090794026d4ce5797d8c761d44694267766af8
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
