@@ -1,6 +1,11 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.2.7                         (2023-09-21)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
 epson-inkjet-printer-escpr2-1.2.6                         (2023-09-13)
 ----------------------------------------------------------------------
  * Supported new models
